2013-09-29  Fred Kiefer <FredKiefer@gmx.de>

	* Headers/opal/OpalSurface.h
	* Source/opal/OpalSurface.m: Make the -device method public.
	* Headers/opal/OpalContext.h: Remove method definitions.
	* Source/opal/OpalContext.m: Limit the accepted image types.

2013-09-29  Fred Kiefer <FredKiefer@gmx.de>

	* Headers/opal/OpalSurface.h
	* Source/opal/OpalSurface.m: Remove compiler warnings.
	* Source/opal/OpalContext.m: Move -flushGraphics method to here.
	* Source/opal/OpalGState.m: Simplify -DPSimage. Evaluate CGCTX
	only once per method.

2013-09-29  Fred Kiefer <FredKiefer@gmx.de>

	* Headers/opal/OpalGState.h: Clean up to reduce warnings.
	* Source/opal/OpalGState.m: Add missing path and matrix methods.
	Remove warnings. Remove unneeded code. Reorder code to allow for
	easier comparison with GSGState.
	* Source/opal/OpalContext.m: Add missing includes to get shm
	completion working. Adjust to changes in OpalGState.

2013-09-23  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/opal/OpalGState.m: move variable declaration outside
	of for loop

2013-09-23  Ivan Vucica <ivan@vucica.net>

	* Source/opal/OpalGState.m:
	Fixed a compile error (extra #endif).

	Added -DPSsetdash:::.

	Added stub -DPSsetstrokeadjust:.

2013-09-23  Ivan Vucica <ivan@vucica.net>

	* Source/opal/OpalGState.m:
	* Source/opal/OpalSurface.m:
	Cutting down on junk code and unneeded output.

2013-09-23  Ivan Vucica <ivan@vucica.net>

	* Source/opal/OpalContext.m:
	Once again pretending we're not drawing on screen. This is a temporary
	fix for -DPSimage:.

	-DPSgsave is now passed on to current gstate before GSContext is given
	chance to replace it.

	Changes relating to rename of OpalSurface and OpalGState methods
	-cgContext to -CGContext.

	* Source/opal/OpalGState.m:
	Apparently mostly functional -compositeGState:. Includes disabled
	modification of code from CairoGState.

	Apparently functional -drawGState.

	-DPSsetlinecap: stub (need to match linecap constants.)
	-DPSsetmiterlimit:.
